src/test/resources/refCompilerOutput/invalid/syntaxErr/while/donoErr.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 14:2 -- mismatched input 'dono' expecting {'done', ';'}
1 parser error(s) detected, no further compilation attempted.
